added swagger for boards
